# coordination-noise-floor-protocol

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html
eval/: pyproject.toml
eval/adapters/tau2_etmcp/: SETUP.md  __init__.py  analysis.py  et_mcp_agent.py  factory.py  run_matrix.py  smoke_register.py  tau2_etmcp_cli.py  test_analysis.py  test_protocols.py  trace_store.py
eval/adapters/v2_pivot/: __init__.py  analyze.py  audit_m1.py  audit_request_equivalence.py  conversation.py  orchestrator.py  protocols.py  run_audit_m1.py  run_matrix.py  run_one.py  test_oracle.py  tools_adapter.py  trace_store.py
eval/analysis/: __main__.py  aggregate.py  phase3_latex_table.tex  phase3_summary.json  phase4_latex_table.tex  phase4_summary.json  silo_reexploration.py  stats.py  tables.py
eval/baselines/: base.py  ca_mcp_style.py  et_mcp.py  full_context.py  summarization.py
eval/benchmarks/: base.py  realm_bench.py
eval/benchmarks/silo_bench/: __main__.py  llm_bridge.py  runner.py
eval/experiments/: run_matrix.py
eval/harness/: __main__.py  agent.py  llm.py  metrics.py  orchestration.py  results.py  runner.py  tools.py  transcript.py
eval/tests/: test_agent.py  test_aggregate.py  test_analysis_cli.py  test_baselines.py  test_llm.py  test_metrics.py  test_orchestration.py  test_results.py  test_runner.py  test_silo_llm_bridge.py  test_silo_runner.py  test_stats.py  test_tables.py  test_token_ceiling.py  test_tools.py  test_toy_benchmark.py  test_tp_adapter.py  test_tp_data.py  test_tp_scorer.py  test_tp_tools.py  test_transcript.py
paper/latex/: Makefile  (+3 more)
prototype/: pyproject.toml
prototype/tests/: conftest.py  test_events.py  test_langgraph.py  test_lifecycle.py  test_policy.py  test_query.py  test_server.py  test_store.py
(+134 files in other folders)
