[project]
name = "et-mcp-eval"
version = "0.1.0"
description = "Evaluation harness for ET-MCP."
requires-python = ">=3.11"
dependencies = [
    "et-mcp",
    "pydantic>=2.7",
    "anthropic>=0.40",
    "tenacity>=8.0",
    "python-ulid>=2.0",
    "datasets>=2.18",
    "scipy>=1.11",
    "numpy>=1.26",
    "srsly>=2.4",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
]

[tool.uv.sources]
et-mcp = { path = "../prototype", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "baselines", "benchmarks", "analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
