[project]
name = "et-mcp"
version = "0.1.0"
description = "Task-scoped queryable trace MCP server for multi-agent LLM coordination."
requires-python = ">=3.11"
readme = "../README.md"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "scikit-learn>=1.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/et_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
